--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -2,6 +2,10 @@ server:
   port: 8080
   shutdown: graceful
 
+spring:
+  application:
+    name: demo-gateway-client2
+
 management:
   endpoint:
     health:
@@ -15,4 +19,10 @@ management:
   endpoints:
     web:
       exposure:
-        include: info, health
+        include: health, info, metrics
+  metrics:
+    export:
+      prometheus:
+        enabled: true
+    tags:
+      application: ${spring.application.name}
